# typster

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  mix.exs  usage-rules.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: invoice.exs  qrcode.exs  report.exs  reusable_templates.exs
lib/: typster.ex
lib/typster/: compile_error.ex  native.ex
native/typster_nif/: Cargo.toml  README.md
native/typster_nif/src/: convert.rs  lib.rs  packages.rs  world.rs
test/: concurrent_test.exs  datetime_test.exs  integration_test.exs  package_test.exs  property_test.exs  typster_test.exs
test/fixtures/: invoice.typ  report.typ
