[package]
name = "typster_nif"
version = "0.3.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.0", default-features = false, features = ["derive"] }
typst = "0.13"
typst-pdf = "0.13"
typst-svg = "0.13"
typst-render = "0.13"
typst-assets = { version = "0.13", features = ["fonts"] }
comemo = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
