[package]
name = "typster_nif"
version = "0.3.2"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.0", default-features = false, features = [
    "derive",
] }
typst = "0.13"
typst-pdf = "0.13"
typst-svg = "0.13"
typst-render = "0.13"
typst-kit = { version = "0.14", features = ["default", "embed-fonts"] }
comemo = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
tar = "0.4"
flate2 = "1.0"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
